<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/im_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="70dp"
        android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sel_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/select_lang"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/english"
        android:layout_below="@+id/tv_sel_lang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_black_outline_5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_arabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/french"
        android:textSize="16sp"
        android:layout_below="@+id/btn_english"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_black_outline_5dp"/>


</RelativeLayout>