<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:background="@color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_select_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_lang"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:padding="15dp"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_smartphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_filled"
            android:text="@string/smartphone"
            android:textColor="@color/white"
            android:minWidth="200dp"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_laptop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_filled"
            android:text="@string/laptop"
            android:textColor="@color/white"
            android:minWidth="200dp"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accessories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rect_filled"
            android:text="@string/accessories"
            android:textColor="@color/white"
            android:minWidth="200dp"/>

    </LinearLayout>

</RelativeLayout>